--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,11 @@ edition = "2021"
 ipaddress = "0.1.2"
 rand = "0.8"
 rand_distr = "0.4"
+rand_chacha = "0.3.1"
+regex = "1.5"
+lazy_static = "1.4.0"
+sha1 = "0.10.1"
+twox-hash = "1.6.2"
 strum = "0.23"
 strum_macros = "0.23"
 tordoc = {path = "../tordoc"}
