--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,6 @@ strum_macros = "0.23"
 tordoc = {path = "../tordoc"}
 seeded_rand = {path = "../seeded_rand"}
 ipnet = "2.5.0"
-derive_builder = "0.10.2"
 serde = { version = "1.0.103", features = ["derive"] }
 serde_json = "1.0.85"
+fromsuper = "0.1"
